--- a/src/components/order/flow/List.less
+++ b/src/components/order/flow/List.less
@@ -1,19 +1,47 @@
 .table {
 
+  .warning {
+    color: #ffbf00;
+  }
+
+  .danger {
+    color: #F04134;
+  }
+
   :global {
     .ant-table-tbody > tr > td,
     .ant-table-thead > tr > th {
       height: 60px;
 
       &:nth-child(1) {
-        width: 40%;
+        width: 20%;
       }
 
       &:nth-child(2) {
-        width: 40%;
+        width: 10%;
       }
 
       &:nth-child(3) {
+        width: 10%;
+      }
+
+      &:nth-child(4) {
+        width: 10%;
+      }
+
+      &:nth-child(5) {
+        width: 10%;
+      }
+
+      &:nth-child(6) {
+        width: 10%;
+      }
+
+      &:nth-child(7) {
+        width: 10%;
+      }
+
+      &:nth-child(8) {
         width: 20%;
       }
     }
