--- a/src/components/order/orderList/List.less
+++ b/src/components/order/orderList/List.less
@@ -1,20 +1,64 @@
 .table {
 
+  .warning {
+    color: #ffbf00;
+  }
+
+  .danger {
+    color: #F04134;
+  }
+
   :global {
     .ant-table-tbody > tr > td,
     .ant-table-thead > tr > th {
       height: 60px;
 
       &:nth-child(1) {
-        width: 40%;
+        width: 9%;
       }
 
       &:nth-child(2) {
-        width: 40%;
+        width: 15%;
       }
 
       &:nth-child(3) {
-        width: 20%;
+        width: 7%;
+      }
+
+      &:nth-child(4) {
+        width: 7%;
+      }
+
+      &:nth-child(5) {
+        width: 7%;
+      }
+
+      &:nth-child(6) {
+        width: 7%;
+      }
+
+      &:nth-child(7) {
+        width: 7%;
+      }
+
+      &:nth-child(8) {
+        width: 7%;
+      }
+
+      &:nth-child(9) {
+        width: 10%;
+      }
+
+      &:nth-child(10) {
+        width: 10%;
+      }
+
+      &:nth-child(11) {
+        width: 7%;
+      }
+
+      &:nth-child(12) {
+        width: 7%;
       }
     }
 
