--- a/src/components/layout/main.less
+++ b/src/components/layout/main.less
@@ -291,7 +291,7 @@
 
 .popovermenu {
   width: 280px;
-  left: 12px!important;
+  left: 6px;
 
   :global .ant-popover-inner-content {
     padding: 0;
