--- a/src/routes/demo/Demo.less
+++ b/src/routes/demo/Demo.less
@@ -1,59 +1,5 @@
   :global {
-
-    .table-animate-action-bar {
-      margin: 20px;
-      background: #fff;
-      line-height: 40px;
-      height: 40px;
-      position: relative;
-      border-radius: 4px;
+    body{
+      overflow:auto !important;
     }
-
-    .table-animate-action-bar button {
-      position: absolute;
-      right: 10px;
-      top: 0;
-      bottom: 0;
-      margin: auto;
-      width: 80px;
-      height: 20px;
-      border-radius: 4px;
-      line-height: 1;
-    }
-
-
-    .table-animate-table .ant-table-thead > tr > th {
-      background: #E5E5E5;
-      padding: 10px 8px;
-      display: inline-block;
-    }
-    .table-animate-table .ant-table-tbody > tr > td {
-      padding: 10px 8px;
-      display: inline-block;
-      vertical-align: bottom;
-    }
-
-
-    .table-animate-table .ant-table-thead > tr, .table-animate-table .ant-table-tbody > tr {
-      display: block;
-    }
-
-    .table-animate-table .ant-table-thead > tr, .table-animate-table .ant-table-tbody > tr {
-      transition: none;
-    }
-
-
-    .table-animate-table .ant-table-thead > tr > th:nth-child(1), .table-animate-table .ant-table-tbody > tr > td:nth-child(1) {
-      width: 25%;
-    }
-    .table-animate-table .ant-table-thead > tr > th:nth-child(2), .table-animate-table .ant-table-tbody > tr > td:nth-child(2) {
-      width: 15%;
-    }
-    .table-animate-table .ant-table-thead > tr > th:nth-child(3), .table-animate-table .ant-table-tbody > tr > td:nth-child(3) {
-      width: 40%;
-    }
-    .table-animate-table .ant-table-thead > tr > th:nth-child(4), .table-animate-table .ant-table-tbody > tr > td:nth-child(4) {
-      width: 20%;
-    }
-
-}
+  }
