--- a/src/components/common/TableBodyWrapper.less
+++ b/src/components/common/TableBodyWrapper.less
@@ -7,39 +7,41 @@
     color: #F04134;
   }
 
-  .ant-table-tbody > tr > td,
-  .ant-table-thead > tr > th {
-    height: 60px;
-  }
+  .table-motion {
+    .ant-table-tbody > tr > td,
+    .ant-table-thead > tr > th {
+      height: 60px;
+    }
+  
+    .ant-table-thead {
+      & > tr {
+        transition: none;
+        display: block;
 
-  .ant-table-thead {
-    & > tr {
-      transition: none;
-      display: block;
-
-      & > th {
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
+        & > th {
+          display: inline-flex;
+          align-items: center;
+          justify-content: center;
+        }
       }
     }
-  }
 
-  .ant-table-tbody {
-    & > tr {
-      transition: none;
-      display: block;
-      border-bottom: 1px solid #f5f5f5;
+    .ant-table-tbody {
+      & > tr {
+        transition: none;
+        display: block;
+        border-bottom: 1px solid #f5f5f5;
 
-      & > td {
-        border-bottom: none;
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-      }
+        & > td {
+          border-bottom: none;
+          display: inline-flex;
+          align-items: center;
+          justify-content: center;
+        }
 
-      &.ant-table-expanded-row-level-1 > td {
-        height: auto;
+        &.ant-table-expanded-row-level-1 > td {
+          height: auto;
+        }
       }
     }
   }
