--- a/src/components/common/mediaPlayer/MediaPlayer.less
+++ b/src/components/common/mediaPlayer/MediaPlayer.less
@@ -39,12 +39,14 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-width: 640px;
+  min-width: 640px;
+  // max-width: 1200px;
 }
 
 .media-player {
   width: 100%;
-  max-width: 640px;
+  min-width: 640px;
+  // max-width: 1200px;
   position: relative;
 
   // hide native controls
