--- a/src/components/layout/main.less
+++ b/src/components/layout/main.less
@@ -154,6 +154,20 @@
             background-color: rgba(0, 0, 0, 0.2);
           }
         }
+
+        &.ant-menu-vertical {
+          .ant-menu-sub {
+            height: 0;
+            opacity: 0;
+            overflow: hidden;
+          }
+          .ant-menu-submenu-active {
+            .ant-menu-sub {
+              height: auto;
+              opacity: 1;
+            }
+          }
+        }
       }
 
       .ant-menu {
