fix list with DropMenu

--- a/src/components/account/admin/List.less
+++ b/src/components/account/admin/List.less
@@ -19,7 +19,7 @@
       }
 
       &:nth-child(3) {
-        width: 10%;
+        width: 5%;
       }
 
       &:nth-child(4) {
@@ -31,7 +31,7 @@
       }
 
       &:nth-child(6) {
-        width: 10%;
+        width: 7%;
       }
 
       &:nth-child(7) {
@@ -43,6 +43,10 @@
       }
 
       &:nth-child(9) {
+        width: 8%;
+      }
+
+      &:nth-child(10) {
         width: 10%;
       }
     }
