--- a/src/components/account/user/List.less
+++ b/src/components/account/user/List.less
@@ -19,7 +19,7 @@
       }
 
       &:nth-child(3) {
-        width: 20%;
+        width: 15%;
       }
 
       &:nth-child(4) {
@@ -27,10 +27,14 @@
       }
 
       &:nth-child(5) {
-        width: 20%;
+        width: 15%;
       }
 
       &:nth-child(6) {
+        width: 10%;
+      }
+
+      &:nth-child(7) {
         width: 10%;
       }
     }
