--- a/src/routes/App/vars.less
+++ b/src/routes/App/vars.less
@@ -1,4 +1,4 @@
-@import "../../node_modules/antd/lib/style/themes/default.less"; // // Prefix
+@import "../../../node_modules/antd/lib/style/themes/default.less"; // // Prefix
 // @ant-prefix             : ant;
 //
 // // Color
