left Menu style fix

--- a/src/routes/App/layout/Layout.less
+++ b/src/routes/App/layout/Layout.less
@@ -228,6 +228,21 @@
     }
   }
 
+  .ant-menu-inline {
+    .ant-menu-item{
+      border-right: 3px solid transparent;
+      margin-left: -1px;
+      left: 1px;
+    }
+
+    .ant-menu-item-selected {
+      border-right: 3px solid transparent;
+      margin-right: 2px;
+      border-right-color: #fff;
+      transform: translateZ(0);
+    }
+  }
+
   .ant-menu-submenu-vertical {
     .ant-menu-item-selected {
       background-color: @primary-color;
