--- a/src/routes/App/layout/Layout.less
+++ b/src/routes/App/layout/Layout.less
@@ -236,17 +236,36 @@
     }
 
     .ant-menu-item-selected {
-      border-right: 3px solid transparent;
+      border-right: 3px solid #fff;
       margin-right: 2px;
-      border-right-color: #fff;
       transform: translateZ(0);
     }
   }
 
+  &.ant-menu-inline .ant-menu-item{
+    border-right: 3px solid transparent;
+    margin-left: -1px;
+    left: 1px;
+  }
+
+  &.ant-menu-inline .ant-menu-item-selected {
+    border-right: 3px solid #fff;
+    margin-right: 2px;
+    transform: translateZ(0);
+  }
+
   .ant-menu-submenu-vertical {
+    .ant-menu-item {
+      border: none;
+      margin: 2px;
+    }
+
     .ant-menu-item-selected {
       background-color: @primary-color;
-      a{
+      border-left: 3px solid #fff;
+
+      transform: translateZ(0);
+      a {
         color: #fff;
       }
     }
