optimize app styles

--- a/src/routes/App/layout/Layout.less
+++ b/src/routes/App/layout/Layout.less
@@ -190,14 +190,14 @@
     :global {
       .content-inner {
         background: #fff;
-        padding: 24px;
+        padding: 16px;
         box-shadow: @shadow-1;
         min-height: e("calc(100vh - 184px)");
       }
     }
 
     .container {
-      margin: 24px;
+      padding: 0 16px 16px;
     }
 
     .content {
