--- a/src/routes/App/skin.less
+++ b/src/routes/App/skin.less
@@ -69,10 +69,10 @@ body {
     justify-content: center;
 
     .ant-modal {
-      top: 10px;
+      top: 0;
 
       .ant-modal-body {
-        max-height: 80vh;
+        max-height: e("calc(100vh - 150px)");
         overflow-y: auto;
       }
     }
