fix header badge

--- a/src/routes/App/layout/BadgeBox.less
+++ b/src/routes/App/layout/BadgeBox.less
@@ -13,7 +13,8 @@
     border-bottom: 2px solid #fff;
     display: flex;
     color: @dark-half;
-    transition: @transition-ease-in;
+    transition: border-color 0.3s ease-in;
+    margin-right: 6px;
 
     &:hover {
       background-color: #eee;
