--- a/src/routes/Dashboard/components/numberCard.less
+++ b/src/routes/Dashboard/components/numberCard.less
@@ -1,19 +1,22 @@
 @import "../../App/vars.less";
 
 .numberCard {
-  padding: 32px;
   font-family: monospace;
   margin-bottom: 24px;
   cursor: pointer;
 
+  .flexBox {
+    display: flex;
+  }
+
   .iconWarp {
-    font-size: 54px;
-    float: left;
+    color: #fff;
+    font-size: 56px;
+    padding: 16px;
   }
 
   .content {
-    width: 100%;
-    padding-left: 78px;
+    padding: 16px;
 
     .title {
       line-height: 16px;
