fix numberCard style

--- a/src/routes/Dashboard/components/numberCard.less
+++ b/src/routes/Dashboard/components/numberCard.less
@@ -4,6 +4,7 @@
   font-family: monospace;
   margin-bottom: 24px;
   cursor: pointer;
+  box-shadow: 3px 3px 3px #eee;
 
   .flexBox {
     display: flex;
@@ -16,7 +17,9 @@
   }
 
   .content {
+    flex: 1;
     padding: 16px;
+
 
     .title {
       line-height: 16px;
