--- a/src/routes/App/layout/Layout.less
+++ b/src/routes/App/layout/Layout.less
@@ -230,26 +230,26 @@
 
   .ant-menu-inline {
     .ant-menu-item{
-      border-right: 3px solid transparent;
+      border-right: 2px solid transparent;
       margin-left: -1px;
       left: 1px;
     }
 
     .ant-menu-item-selected {
-      border-right: 3px solid #fff;
+      border-right: 2px solid #fff;
       margin-right: 2px;
       transform: translateZ(0);
     }
   }
 
   &.ant-menu-inline .ant-menu-item{
-    border-right: 3px solid transparent;
+    border-right: 2px solid transparent;
     margin-left: -1px;
     left: 1px;
   }
 
   &.ant-menu-inline .ant-menu-item-selected {
-    border-right: 3px solid #fff;
+    border-right: 2px solid #fff;
     margin-right: 2px;
     transform: translateZ(0);
   }
@@ -268,6 +268,16 @@
       a {
         color: #fff;
       }
+    }
+  }
+}
+
+:global .ant-menu-light {
+  .ant-menu-submenu-selected {
+    color: @primary-color;
+
+    &:not(.ant-menu-submenu-open) {
+      background-color: @dark-half;
     }
   }
 }
