--- a/src/routes/account/User/List.less
+++ b/src/routes/account/User/List.less
@@ -19,15 +19,15 @@
       }
 
       &:nth-child(3) {
-        width: 14%;
+        width: 12%;
       }
 
       &:nth-child(4) {
-        width: 13%;
+        width: 10%;
       }
 
       &:nth-child(5) {
-        width: 20%;
+        width: 15%;
       }
 
       &:nth-child(6) {
@@ -39,6 +39,10 @@
       }
 
       &:nth-child(8) {
+        width: 10%;
+      }
+
+      &:nth-child(9) {
         width: 10%;
       }
     }
