--- a/src/components/UploadFile/UploadFile.less
+++ b/src/components/UploadFile/UploadFile.less
@@ -9,6 +9,15 @@
     font-size: 12px;
     color: #666;
   }
+
+  .ant-upload-list-picture-card .ant-upload-list-item {
+    width: 100px;
+    height: auto;
+  }
+
+  .ant-upload-list-picture-card .ant-upload-list-item-thumbnail img {
+    object-fit: contain; //cover
+  }
 }
 
 .previewImage{
