--- a/src/entry.ejs
+++ b/src/entry.ejs
@@ -8,6 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="A admin dashboard application demo built upon Ant Design and Dva.js">
   <title>dva admin</title>
+  <link rel="icon" href="http://www.newband.com/images1/favicon.ico" type="image/x-icon">
   <!--[if lte IE 10]>
       <script
         src="https://as.alipayobjects.com/g/component/??console-polyfill/0.2.2/index.js,media-match/2.0.2/media.match.min.js"></script>
